Cleanup minor style issues, including header colors and alignment of profile sections

--- a/stylesheets/phnx.css
+++ b/stylesheets/phnx.css
@@ -860,10 +860,9 @@ span.link{
 }
 
 .large-device .profile-icon {
-	/* total width is 320 */
-	width: 252px;
+	width: 270px;
 	padding-right: 20px;
-	padding-left: 28px;
+	padding-left: 30px;
 	margin-left: 20px;
 
 	float: left;
