--- a/stylesheets/pure.css
+++ b/stylesheets/pure.css
@@ -113,7 +113,7 @@ body.default {
 }
 
 .scene-title {
-	color: #222;
+	color: white;
 }
 .section-header span {
 	color: white;
